# shopnexus-recommender-system

./: .gitignore  README.md  app.py  config.py  docker-compose.yml  docker-compose.yml.save  docs.md  example.md  hybrid_ncf_model.py  idea.md  main.py  mock_data_generator.py  ncf_model.py  note.md  pyproject.toml  routes.py  seed_mock_products.py  service.py  temp.md  train_ncf_with_mock_data.py  unified_service.py  utils.py
docs/: GETTING_STARTED.md  README_NCF_MOCK_DATA.md  SUMMARY.md
models/: hybrid_ncf_final.pt  ncf_mappings.pkl  ncf_model_final.pt
src/: app.py  cf_model.py  config.py  embeddings.py  evaluate.py  fusion.py  milvus.py  routes.py  service.py  test_train.py  utils.py
